changed JDK version to 17